hero page content added HTML

--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <script src="https://kit.fontawesome.com/8d7bb5f562.js" crossorigin="anonymous"></script>
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="./dist/css/main.css">
- <title>Olga Minaieva | FrontEnd Developer</title>
-</head>
-<body>
- <h1>Hello</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/8d7bb5f562.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./dist/css/main.css" />
+    <title>Olga Minaieva | FrontEnd Developer</title>
+  </head>
+  <body>
+    <!-- Header -->
+
+    <header id="header-home">
+      <div class="container">
+        <nav id="main-nav">
+          <h1>< / OLI-CODING ></h1>
+          <ul>
+            <li><a href="index.html" class="current">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="work.html">Work</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header-content">
+         <h1>I am Olga The <span class="txt-type" data-wait="'3000" data-words ='["FrontEnd Developer"]'></span></h1>
+         <p class="lead">I specialize in n building the user-facing part of web applications, focusing on creating visually appealing, responsive, and interactive interfaces</p>
+         <a href="work.html" class="btn-light">View My Work</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
