--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header id="header-home">
       <div class="container">
         <nav id="main-nav">
-          <h1>< / OLI-CODING ></h1>
+          <img src="dist/img/logo-transparent.png" alt="My Logo" id="logo">
           <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
