typewrite function added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </ul>
         </nav>
         <div class="header-content">
-         <h1>I am Olga The <span class="txt-type" data-wait="'3000" data-words ='["FrontEnd Developer"]'></span></h1>
+         <h1>I am Olga The <span class="txt-type" data-wait="'3000" data-words ='[ "Front-End Developer"]'></span></h1>
          <p class="lead">I specialize in n building the user-facing part of web applications, focusing on creating visually appealing, responsive, and interactive interfaces</p>
          <a href="work.html" class="btn-light">View My Work</a>
         </div>
