section a added in html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header id="header-home">
       <div class="container">
         <nav id="main-nav">
-          <img src="dist/img/logo-transparent.png" alt="My Logo" id="logo">
+          <img src="dist/img/logo-transparent.png" alt="My Logo" id="logo" />
           <ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -31,12 +31,70 @@
           </ul>
         </nav>
         <div class="header-content">
-         <h1>I am Olga The <span class="txt-type" data-wait="'3000" data-words ='[ "Front-End Developer"]'></span></h1>
-         <p class="lead">I specialize in n building the user-facing part of web applications, focusing on creating visually appealing, responsive, and interactive interfaces</p>
-         <a href="work.html" class="btn-light">View My Work</a>
+          <h1>
+            I am Olga The
+            <span
+              class="txt-type"
+              data-wait="'3000"
+              data-words='[ "Front-End Developer"]'
+            ></span>
+          </h1>
+          <p class="lead">
+            I specialize in n building the user-facing part of web applications,
+            focusing on creating visually appealing, responsive, and interactive
+            interfaces
+          </p>
+          <a href="work.html" class="btn-light">View My Work</a>
         </div>
       </div>
     </header>
-    <script src="app.js"></script>
+
+    <!-- Section A: Specialize -->
+    <section id="home-a" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">I Specialize In</h2>
+        <div class="bottom-line"></div>
+        <p class="lead">Photography as well as creating digital masterpieces</p>
+        <div class="specials">
+          <div>
+            <i class="fas fa-file-alt fa-2x"></i>
+            <h3>Concept</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+              ipsa commodi itaque nihil maxime ex ut quia placeat dolore
+              provident!
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-desktop fa-2x"></i>
+            <h3>UI/UX</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+              ipsa commodi itaque nihil maxime ex ut quia placeat dolore
+              provident!
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-object-ungroup fa-2x"></i>
+            <h3>Visual Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+              ipsa commodi itaque nihil maxime ex ut quia placeat dolore
+              provident!
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-thumbs-up fa-2x"></i>
+            <h3>Interaction</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+              ipsa commodi itaque nihil maxime ex ut quia placeat dolore
+              provident!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="appl.js"></script>
   </body>
 </html>
